[gd_scene load_steps=22 format=2]

[ext_resource path="res://Textures/Boss/Ship1.png" type="Texture" id=1]
[ext_resource path="res://Textures/Boss/Chain.png" type="Texture" id=2]
[ext_resource path="res://Textures/Boss/Ball.png" type="Texture" id=3]
[ext_resource path="res://Boss/Roboton1.gd" type="Script" id=4]
[ext_resource path="res://HUD/Theme.tres" type="Theme" id=5]
[ext_resource path="res://Assets/Sounds/Metal.ogg" type="AudioStream" id=6]
[ext_resource path="res://Assets/Sounds/Oof.ogg" type="AudioStream" id=7]

[sub_resource type="SphereShape" id=20]

[sub_resource type="SphereShape" id=4]
radius = 0.875446

[sub_resource type="CubeMesh" id=11]
size = Vector3( 0.2, 1, 0.2 )

[sub_resource type="SpatialMaterial" id=12]
flags_transparent = true
flags_unshaded = true
albedo_texture = ExtResource( 2 )
uv1_scale = Vector3( 3, 2, 1 )

[sub_resource type="BoxShape" id=13]
extents = Vector3( 0.05, 0.5, 0.05 )

[sub_resource type="SphereShape" id=8]
radius = 1.18573

[sub_resource type="QuadMesh" id=9]
size = Vector2( 2.5, 2.5 )

[sub_resource type="SpatialMaterial" id=10]
flags_transparent = true
flags_unshaded = true
params_billboard_mode = 1
albedo_texture = ExtResource( 3 )

[sub_resource type="QuadMesh" id=1]
size = Vector2( 3.5, 2 )

[sub_resource type="SpatialMaterial" id=2]
flags_transparent = true
flags_unshaded = true
params_billboard_mode = 2
albedo_texture = ExtResource( 1 )

[sub_resource type="QuadMesh" id=17]
size = Vector2( 1.5, 1 )

[sub_resource type="ViewportTexture" id=18]
viewport_path = NodePath("Viewport")

[sub_resource type="SpatialMaterial" id=19]
resource_local_to_scene = true
render_priority = 2
flags_transparent = true
flags_unshaded = true
flags_no_depth_test = true
flags_do_not_receive_shadows = true
params_billboard_mode = 2
albedo_texture = SubResource( 18 )
uv1_scale = Vector3( 0.933, 2.883, 1 )
uv1_offset = Vector3( -0.05, -1.106, 0 )

[sub_resource type="CylinderShape" id=21]
radius = 1.34489
height = 0.714793

[node name="Roboton1" type="RigidBody"]
collision_mask = 32769
mass = 10.0
gravity_scale = 0.0
can_sleep = false
script = ExtResource( 4 )

[node name="Hurtbox" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.667456, 0 )
shape = SubResource( 20 )

[node name="Hitbox" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0733211, 0.628706, 0 )
shape = SubResource( 4 )

[node name="HingeBt1" type="HingeJoint" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.967129, 0 )
nodes/node_a = NodePath("..")
nodes/node_b = NodePath("../Chain1")

[node name="Chain1" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.2932, 0 )
collision_layer = 32768
mass = 0.044898

[node name="MeshInstance" type="MeshInstance" parent="Chain1"]
mesh = SubResource( 11 )
material/0 = SubResource( 12 )

[node name="CollisionShape" type="CollisionShape" parent="Chain1"]
shape = SubResource( 13 )

[node name="Hinge1t2" type="HingeJoint" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.79003, 0 )
nodes/node_a = NodePath("../Chain1")
nodes/node_b = NodePath("../Chain2")

[node name="Chain2" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.29418, 0 )
collision_layer = 32768
mass = 0.044898

[node name="MeshInstance" type="MeshInstance" parent="Chain2"]
mesh = SubResource( 11 )
material/0 = SubResource( 12 )

[node name="CollisionShape" type="CollisionShape" parent="Chain2"]
shape = SubResource( 13 )

[node name="Hinge2t3" type="HingeJoint" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.72323, 0 )
nodes/node_a = NodePath("../Chain2")
nodes/node_b = NodePath("../Chain3")

[node name="Chain3" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3.29094, 0 )
collision_layer = 32768
mass = 0.044898

[node name="MeshInstance" type="MeshInstance" parent="Chain3"]
mesh = SubResource( 11 )
material/0 = SubResource( 12 )

[node name="CollisionShape" type="CollisionShape" parent="Chain3"]
shape = SubResource( 13 )

[node name="Hinge3t4" type="HingeJoint" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3.78507, 0 )
nodes/node_a = NodePath("../Chain3")
nodes/node_b = NodePath("../Chain4")

[node name="Chain4" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4.27199, 0 )
collision_layer = 32768
mass = 0.044898

[node name="MeshInstance" type="MeshInstance" parent="Chain4"]
mesh = SubResource( 11 )
material/0 = SubResource( 12 )

[node name="CollisionShape" type="CollisionShape" parent="Chain4"]
shape = SubResource( 13 )

[node name="Hinge4t5" type="HingeJoint" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4.70842, 0 )
nodes/node_a = NodePath("../Chain4")
nodes/node_b = NodePath("../Chain5")

[node name="Chain5" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5.23498, 0 )
collision_layer = 32768
mass = 0.044898

[node name="MeshInstance" type="MeshInstance" parent="Chain5"]
mesh = SubResource( 11 )
material/0 = SubResource( 12 )

[node name="CollisionShape" type="CollisionShape" parent="Chain5"]
shape = SubResource( 13 )

[node name="Hinge5t6" type="HingeJoint" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5.72912, 0 )
nodes/node_a = NodePath("../Chain5")
nodes/node_b = NodePath("../Chain6")

[node name="Chain6" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -6.21603, 0 )
collision_layer = 32768
mass = 0.044898

[node name="MeshInstance" type="MeshInstance" parent="Chain6"]
mesh = SubResource( 11 )
material/0 = SubResource( 12 )

[node name="CollisionShape" type="CollisionShape" parent="Chain6"]
shape = SubResource( 13 )

[node name="Hinge6tB" type="HingeJoint" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -6.65246, 0 )
nodes/node_a = NodePath("../Chain6")
nodes/node_b = NodePath("../WreckingBall")

[node name="WreckingBall" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -7.66932, 0 )
collision_mask = 32769
mass = 0.14
contacts_reported = 4
contact_monitor = true
can_sleep = false

[node name="CollisionShape" type="CollisionShape" parent="WreckingBall"]
shape = SubResource( 8 )

[node name="BallMesh" type="MeshInstance" parent="WreckingBall"]
mesh = SubResource( 9 )
material/0 = SubResource( 10 )

[node name="Eggsman" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 250, 55 )
transparent_bg = true
render_target_v_flip = true

[node name="Label" type="Label" parent="Viewport"]
margin_left = 2.0
margin_top = 2.0
margin_right = 200.0
margin_bottom = 60.0
theme = ExtResource( 5 )
text = "Dr. Roboton"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="MeshInstance" parent="."]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.1, 0, -1.08625, 0 )
visible = false
mesh = SubResource( 17 )
skeleton = NodePath("../Eggsman")
material/0 = SubResource( 19 )

[node name="DentSound" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.405687, 0 )
stream = ExtResource( 6 )
unit_size = 15.0

[node name="OofSound" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.405687, 0 )
stream = ExtResource( 7 )
unit_size = 10.0

[node name="OofArea" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="OofArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.341986, 0 )
shape = SubResource( 21 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="WreckingBall" to="." method="_on_WreckingBall_body_entered"]
[connection signal="body_entered" from="OofArea" to="." method="_on_OofArea_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
